--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Project K5</title>
         <link rel="stylesheet" href="../styles/app.css" type="text/css"/> 
         <script src="/socket.io/socket.io.js"></script>
+        <script src="/scripts/tools.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
             function enterSpace(){
