--- a/html/space.html
+++ b/html/space.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project K5</title>
+        <title>Project K5</title>    
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+        <!--<script async src="scripts/_tools.js"></script>-->
+        <script src="/scripts/space.js"></script>
     </head>
     <body>
         <p>Space</p>
