--- a/index.html
+++ b/index.html
@@ -4,20 +4,13 @@
         <title>Project K5</title>
         <link rel="stylesheet" href="../styles/app.css" type="text/css"/> 
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/scripts/tools.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
             function enterSpace(){
                 localStorage.setItem('roomId', $('#roomId').val());
                 localStorage.setItem('nickName', $('#nickName').val());
 
-                location.href = '/chat';
-            }
-            function joinVideoChat(){
-                localStorage.setItem('roomId', $('#roomId').val());
-                localStorage.setItem('nickName', $('#nickName').val());
-
-                location.href = '/vchat';
+                location.href = '/space';
             }
         </script>
     </head>
