--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
-            function enterSpace(){
+            function enterRoom(){
                 localStorage.setItem('roomId', $('#roomId').val());
                 localStorage.setItem('nickName', $('#nickName').val());
 
                 location.href = '/space';
+
             }
         </script>
     </head>
@@ -19,6 +20,6 @@
         <p>Project K5 is a simple collaboration web application using WebRTC.</p><br>
         <label for="roomId">Enter room Id to join:</label> <input id="roomId"> <br>
         <label for="nickName">Enter your nickname:</label> <input id="nickName"> <br><br>
-        <button id="btnEnter" type="button" onclick="enterSpace()">Enter</button>
+        <button id="btnEnter" type="button" onclick="enterRoom()">Enter</button>
     </body>
 </html>
