--- a/html/space.html
+++ b/html/space.html
@@ -33,29 +33,35 @@
                 <video id="localVideo" autoplay muted></video>
                 <video id="video1" autoplay muted></video>
                 <video id="video2" autoplay muted></video>
+                <video id="video3" autoplay muted></video>
+                <video id="video4" autoplay muted></video>
             </article>
+            <article style="width: 100%; height: 1px; background-color: #1ba364"></article>
             <article class="textChat">
-                <p class="local">Mesfksdjfkl ajdfjasdfjasdjflaksdkjfaklsjd asdfklj asdfj kfjwejflkjdflasdjf; ladjf;lajsdf aj;flkjasd;fklj a;lfjasl jf;lasdjf lajdfljafjqwiofjoqifsjdf sdklfjaskldfj asdlkfjslkfj adlfkj asdkfjaslkdfj asdjf sage1</p>
-                <p>Messlskdjf asdjfaklsdjf ajfjfqjwefqwefoj qfjfjqoefj qejfwejf djf  askdfh akjdhfl hfqufh84hf uqhf auhfqhf asdfhoasdhf afhla hfakdfh adfh ladhfla jhflaksdhf akfh lqkhf lasdhflkashdfl asdhflk hasldkfh laksjdhf lahf83hf qwefha lksjdhf laksdhfl sjfgas dalsdfj adfpafj;lkjp age2</p>
-                <p class="local">Message3</p>
-                <p class="local">Message4</p>
-                <p>Message5</p>
-                <p>Message6</p>
-                <p class="local">Message6</p>
-                <p>Message</p>
-                <p class="local">Message5</p>
-                <p>Message5</p>
-                <p>Message5</p>
-                <p class="local">Message5</p>
-                <p>Message5</p>
-                <p>Message5</p>
-                <p class="local">Message5</p>
-                <p class="local">Message5</p>
-                <p class="local">Message5</p>
-                <p>Message5</p>
+                <p style="width:100%; font-size:14px; color:#1ba364; font-weight:bold; text-align: center;">Room "" text chat</p>
+                <p class="localLabel">User 88:88:</p>
+                <p class="local">Mesfksdjfkl ajdfjasdfjasdjflaksdkjfaklsjd asdfklj asdfj kfjwejflkjdflasdjf; ladjf;lajsdf aj;flkjasd;fklj a;lfjasl jf;lasdjf lajdfljafjqwiofjoqifsjdf sdklfjaskldfj asdlkfjslkfj adlfkj asdkfjaslkdfj asdjf sage1</p><br>
+                <p class="remoteLabel">Resu 88:89:</p>
+                <p class="remote">Messlskdjf asdjfaklsdjf ajfjfqjwefqwefoj qfjfjqoefj qejfwejf djf  askdfh akjdhfl hfqufh84hf uqhf auhfqhf asdfhoasdhf afhla hfakdfh adfh ladhfla jhflaksdhf akfh lqkhf lasdhflkashdfl asdhflk hasldkfh laksjdhf lahf83hf qwefha lksjdhf laksdhfl sjfgas dalsdfj adfpafj;lkjp age2</p><br>
+                <p class="local">Message3</p><br>
+                <p class="local">Message4</p><br>
+                <p class="remote">Message5</p><br>
+                <p class="remote">Message6</p><br>
+                <p class="local">Message6</p><br>
+                <p class="remote">Message</p><br>
+                <p class="local">Message5</p><br>
+                <p class="remote">Message5</p><br>
+                <p class="remote">Message5</p><br>
+                <p class="local">Message5</p><br>
+                <p class="remote">Message5</p><br>
+                <p class="remote">Message5</p><br>
+                <p class="local">Message5</p><br>
+                <p class="local">Message5</p><br>
+                <p class="local">Message5</p><br>
+                <p class="remote">Message5</p><br>
             </article>
-            <article class="sharedFiles">
-                Some files
+            <article class="textInput">
+                <textarea></textarea> <button>Send</button>
             </article>
         </section>
         <footer>
