--- a/html/space.html
+++ b/html/space.html
@@ -60,8 +60,9 @@
                 <p class="local">Message5</p><br>
                 <p class="remote">Message5</p><br>
             </article>
+            <article style="width: 100%; height: 1px; background-color: #1ba364"></article>
             <article class="textInput">
-                <textarea></textarea> <button>Send</button>
+                <textarea></textarea><button>Send</button>
             </article>
         </section>
         <footer>
