--- a/html/space.html
+++ b/html/space.html
@@ -22,24 +22,25 @@
         </nav>
         <aside>
             <label>Users in the room:</label>
-            <ul>
+            <ul id="userList">
+                <!--
                 <li><a href="javascript:void(0)" onclick="console.log('--1');">User 1</a></li>
                 <li><a href="javascript:void(0)" onclick="console.log('--2');">User 2</a></li>
                 <li><a href="javascript:void(0)" onclick="console.log('--3');">User 3</a></li>
+                -->
             </ul>
         </aside>
         <section>
             <article class="videoElements">
                 <video id="localVideo" autoplay muted></video>
-                <video id="video1" autoplay muted></video>
+                <!--<video id="video1" autoplay muted></video>
                 <video id="video2" autoplay muted></video>
                 <video id="video3" autoplay muted></video>
-                <video id="video4" autoplay muted></video>
+                <video id="video4" autoplay muted></video>-->
             </article>
             <article style="width: 100%; height: 1px; background-color: #1ba364"></article>
-            <article class="textChat">
-                <p style="width:100%; font-size:14px; color:#1ba364; font-weight:bold; text-align: center;">Room "" text chat</p>
-                <p class="localLabel">User 88:88:</p>
+            <article id="chatArea" class="textChat">
+                <!--<p class="localLabel">User 88:88:</p>
                 <p class="local">Mesfksdjfkl ajdfjasdfjasdjflaksdkjfaklsjd asdfklj asdfj kfjwejflkjdflasdjf; ladjf;lajsdf aj;flkjasd;fklj a;lfjasl jf;lasdjf lajdfljafjqwiofjoqifsjdf sdklfjaskldfj asdlkfjslkfj adlfkj asdkfjaslkdfj asdjf sage1</p><br>
                 <p class="remoteLabel">Resu 88:89:</p>
                 <p class="remote">Messlskdjf asdjfaklsdjf ajfjfqjwefqwefoj qfjfjqoefj qejfwejf djf  askdfh akjdhfl hfqufh84hf uqhf auhfqhf asdfhoasdhf afhla hfakdfh adfh ladhfla jhflaksdhf akfh lqkhf lasdhflkashdfl asdhflk hasldkfh laksjdhf lahf83hf qwefha lksjdhf laksdhfl sjfgas dalsdfj adfpafj;lkjp age2</p><br>
@@ -58,11 +59,11 @@
                 <p class="local">Message5</p><br>
                 <p class="local">Message5</p><br>
                 <p class="local">Message5</p><br>
-                <p class="remote">Message5</p><br>
+                <p class="remote">Message5</p><br> -->
             </article>
             <article style="width: 100%; height: 1px; background-color: #1ba364"></article>
             <article class="textInput">
-                <textarea></textarea><button>Send</button>
+                <textarea id="textToSend"></textarea><button onclick="btnSendOnClick();">Send</button>
             </article>
         </section>
         <footer>
