--- a/html/space.html
+++ b/html/space.html
@@ -6,7 +6,7 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <!--<script async src="scripts/_tools.js"></script>-->
-        <script src="/scripts/space.js"></script>
+        <script async src="/scripts/space.js"></script>
         <script async src="/scripts/renderspace.js"></script>
     </head>
     <body>
