--- a/html/space.html
+++ b/html/space.html
@@ -31,7 +31,7 @@
             </ul>
         </aside>
         <section>
-            <article class="videoElements">
+            <article id='videoElementsArea' class="videoElements">
                 <video id="localVideo" autoplay muted></video>
                 <!--<video id="video1" autoplay muted></video>
                 <video id="video2" autoplay muted></video>
