--- a/html/space.html
+++ b/html/space.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="javascript:void(0)" onclick="console.log('Text chat');">Text chat</a></li>
-                <li><a href="javascript:void(0)" onclick="console.log('Video chat'); videoTest();">Video chat</a></li>
+                <li><a href="javascript:void(0)" onclick="initVideoOnClick()">Video chat</a></li>
                 <li><a href="javascript:void(0)" onclick="console.log('Share desctop');">Share desctop</a></li>
                 <li><a href="javascript:void(0)" onclick="console.log('Share File');">Share file</a></li>
                 <li style="float:right"><a href="javascript:void(0)" onclick="console.log('Settings');">Settings</a></li>
